# cis1940-haskell

./: CHANGELOG.md  cis1940-haskell.cabal
.github/workflows/: test.yml
Week 1/: HW01.hs  HW01Tests.hs  Literate Haskell.lhs
Week 2/: HW02.hs  Testing.hs
Week1/: HW01Tests.hs
tests/: HW01Tests.hs
