cabal-version:      2.4
name:               cis1940-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Clinton Montague
maintainer:         iblamefish@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cis1940-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

library cis1940-haskell-lib
    exposed-modules: HW01
    hs-source-dirs: Week1
    build-depends: base ^>=4.14
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: HW01Tests.hs
    build-depends: base ^>=4.14, HUnit ^>=1.6, cis1940-haskell-lib
    hs-source-dirs: tests
    default-language: Haskell2010